generated/checkers/gen/AllGen-Concurrency-ef307bc6ef04e8c1ea843231db58e3afaafa9fa6/build_logs/syntax-repair-02/build_stderr_1.log
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkPostCall(const clang::ento::CallEvent&, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:171:60: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableSet<const clang::ento::MemRegion*> >::data_type’ {aka ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’} to ‘const JustUnlockedSetTy*’ {aka ‘const llvm::ImmutableSet<const clang::ento::MemRegion*>*’} in initialization
  171 |   const JustUnlockedSetTy *JU = State->get<JustUnlockedSet>();
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                            |
      |                                                            clang::ento::ProgramStatePartialTrait<llvm::ImmutableSet<const clang::ento::MemRegion*> >::data_type {aka llvm::ImmutableSet<const clang::ento::MemRegion*>}
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp: In member function ‘void {anonymous}::SAGenTestChecker::checkBind(clang::ento::SVal, clang::ento::SVal, const clang::Stmt*, clang::ento::CheckerContext&) const’:
/scratch/chenyuan-data/SAGEN/llvm/llvm-4/clang/lib/Analysis/plugins/SAGenTestHandling/SAGenTestChecker.cpp:180:60: error: cannot convert ‘clang::ento::ProgramStatePartialTrait<llvm::ImmutableSet<const clang::ento::MemRegion*> >::data_type’ {aka ‘llvm::ImmutableSet<const clang::ento::MemRegion*>’} to ‘const JustUnlockedSetTy*’ {aka ‘const llvm::ImmutableSet<const clang::ento::MemRegion*>*’} in initialization
  180 |   const JustUnlockedSetTy *JU = State->get<JustUnlockedSet>();
      |                                 ~~~~~~~~~~~~~~~~~~~~~~~~~~~^~
      |                                                            |
      |                                                            clang::ento::ProgramStatePartialTrait<llvm::ImmutableSet<const clang::ento::MemRegion*> >::data_type {aka llvm::ImmutableSet<const clang::ento::MemRegion*>}
make[3]: *** [tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/build.make:76: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/SAGenTestChecker.cpp.o] Error 1
make[2]: *** [CMakeFiles/Makefile2:31101: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/all] Error 2
make[1]: *** [CMakeFiles/Makefile2:31108: tools/clang/lib/Analysis/plugins/SAGenTestHandling/CMakeFiles/SAGenTestPlugin.dir/rule] Error 2
make: *** [Makefile:7495: SAGenTestPlugin] Error 2
